Fixed minimal details about the css in desafioLayoutShifter

--- a/ResponsiveDesign/desafioLayoutShifter/desktop.css
+++ b/ResponsiveDesign/desafioLayoutShifter/desktop.css
@@ -1,3 +1,15 @@
+header {
+  flex-direction: row;
+}
+
+.main-nav {
+  justify-content: flex-end;
+}
+
+.main-nav__item {
+  margin: 0 1rem;
+}
+
 .c1 {
   width: 100%;
 }
